# Hidden_State_Evaluation

./: .gitignore  README.md  environment.yml  experiment_pipeline_plan.md  pyproject.toml  setup_server.sh
.jupyter/: migrated
configs/: dyck_k_50_noise.yaml  dyck_k_long_no_noise.yaml  dyck_k_no_noise.yaml  dyck_no_noise.yaml  dyck_noise.yaml  shuffle_dyck.yaml  shuffle_dyck_noise.yaml
docs/: codex_conversation_summary.md  experiment_workflow.md
notebooks/: Dyck_4Models_Probe.executed.ipynb  Dyck_4Models_Probe.ipynb  Dyck_4Models_Probe_50_Noise.ipynb  Dyck_4Models_Probe_No_Noise.ipynb  Dyck_All_Models_Train_Probe_Compression.executed.ipynb  Dyck_All_Models_Train_Probe_Compression.ipynb  Dyck_k_4Models_Probe_50_Noise.ipynb  Dyck_k_4Models_Probe_No_Noise.ipynb  README.md  Shuffle_Dyck_4Models_Probe_No_Noise.ipynb
results/html/Dyck_Long/: lstm_prefix200_manifold3d.html  mamba_prefix200_manifold3d.html  rnn_prefix200_manifold3d.html  transformer_prefix200_current_close.html  transformer_prefix200_current_open.html  transformer_prefix200_manifold3d.html
scripts/: analyze_geometry.py  extract_hidden_states.py  run_pipeline.py  run_probes.py  setup_hse_env.sh  train_model.py
src/hse/: __init__.py
src/hse/analysis/: __init__.py
src/hse/analysis/compression/: __init__.py  metrics.py
src/hse/analysis/geometry/: __init__.py  (+1 more)
src/hse/experiments/: __init__.py  dyck.py
src/hse/models/: __init__.py  simple.py
src/hse/tasks/: __init__.py
src/hse/utils/: __init__.py  config.py  extraction.py  io.py  labels_io.py  training.py
tests/: test_scaffold.py
(+19 files in other folders)
